# modelhub

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish-crate.yml
modelhub/: Cargo.toml
src/: cache.rs  lib.rs
src/modelscope/: cache.rs  download.rs  mod.rs  types.rs
vasr-hub/: Cargo.toml
vasr-hub/src/: cache.rs  lib.rs
vasr-hub/src/modelscope/: client.rs  download.rs  types.rs
