[package]
name = "modelhub"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/di-osc/modelhub"
description = "Model cache and download helpers"

[dependencies]
anyhow = "1"
futures-util = "0.3"
indicatif = "0.18"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing = "0.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
