[package]
name = "modelhub"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model cache and download helpers"

[dependencies]
anyhow = "1"
futures-util = "0.3"
indicatif = "0.18"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing = "0.1"

[lints]
workspace = true
